/**
 * GetMicroserviceNameByCursorHandler
 * -----------------------------------------------------------------------------
 * Handler que responde a la query `GetMicroserviceNameByCursorQuery`.
 *
 * üîπ Esta clase forma parte de la **capa de aplicaci√≥n**, implementando el patr√≥n CQRS.
 * üîπ Coordina la paginaci√≥n basada en cursor para el agregado `MicroserviceNameEntity`.
 *
 * ‚ú® Responsabilidad:
 *  - Acceder al repositorio de lectura con paginaci√≥n
 *  - Devolver entidades del dominio (`MicroserviceNameEntity[]`) junto a metadata de cursor
 *
 * üö´ Este handler NO:
 *  - Mapea las entidades a DTOs/Protobuf
 *  - Maneja la l√≥gica de presentaci√≥n (eso lo hace la infraestructura)
 *
 * üß† Justificaci√≥n arquitect√≥nica:
 *  - Mantiene la l√≥gica de paginaci√≥n desacoplada del transporte
 *  - Cumple con los principios de separaci√≥n de intereses (ISO/IEC 42010)
 *  - Compatible con m√∫ltiples adaptadores (REST, GraphQL, gRPC)
 *
 * üîå Dependencias:
 *  - `GetMicroserviceNameWithCursorPort`: puerto de salida del dominio para operaciones de lectura
 */

import { IQueryHandler, QueryHandler } from '@nestjs/cqrs'
import { Inject } from '@nestjs/common'

import { GetMicroserviceNameByCursorQuery } from './get-microserviceName-by-cursor.query'

import { MicroserviceNameEntity } from '@microserviceName/microservice/domain/entities/microserviceName.entity'

import { GetMicroserviceNameWithCursorPort } from '@microserviceName/microservice/application/ports/outbounds/repositories/microserviceName-query-ports'

@QueryHandler(GetMicroserviceNameByCursorQuery)
export class GetMicroserviceNameByCursorHandler
  implements IQueryHandler<GetMicroserviceNameByCursorQuery>
{
  constructor(
    @Inject(GetMicroserviceNameWithCursorPort)
    private readonly getMicroserviceNameWithCursorPort: GetMicroserviceNameWithCursorPort
  ) {}

  /**
   * Ejecuta la query con paginaci√≥n basada en cursor.
   *
   * @param query Query con par√°metros de paginaci√≥n (`afterId`, `limit`)
   * @returns Objeto con:
   *  - `items`: lista de entidades
   *  - `nextCursor`: cursor para la siguiente p√°gina
   *  - `hasMore`: indicador si hay m√°s datos
   */
  async execute(query: GetMicroserviceNameByCursorQuery): Promise<{
    items: MicroserviceNameEntity[]
    nextCursor: string | null
    hasMore: boolean
  }> {
    const { afterId, limit } = query.payload

    const result =
      await this.getMicroserviceNameWithCursorPort.getWithCursor(
        afterId,
        limit
      )

    return {
      items: result.items,
      nextCursor: result.nextCursor,
      hasMore: result.hasMore
    }
  }
}
